syntax = "proto3";

package cubefs.blobstore.common.raft;
option go_package = "./;raft";

import "raft.proto";

service RaftService {
  rpc RaftMessageBatch (stream cubefs.blobstore.common.raft.RaftMessageRequestBatch) returns (stream cubefs.blobstore.common.raft.RaftMessageResponse) {}
  rpc RaftSnapshot (stream cubefs.blobstore.common.raft.RaftSnapshotRequest) returns (stream cubefs.blobstore.common.raft.RaftSnapshotResponse) {}
}